[project]
name = "reminder"
version = "0.1.0"
description = "An open-source Python project."
authors = [
    {name = "Rob Michael",email = "robmichael93@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click (==8.1.0)",
    "pytest (==7.1.2)"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==7.1.2)",
    "black (==22.6.0)",
    "flake8 (==5.0.4)",
    "pre-commit (==2.20.0)",
    "tox (==3.25.1)"
]
